# telebot2

./: pyproject.toml
bot/: keyboards.py  main.py  messages.py
