[tool.poetry]
name = "telebot2"
version = "0.1.0"
description = ""
authors = ["ilia <ilia.volkov2016@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
